fix: error z-index with track handle

--- a/assets/index.less
+++ b/assets/index.less
@@ -56,6 +56,7 @@
 
   &-handle {
     position: absolute;
+    z-index: 1;
     width: 14px;
     height: 14px;
     margin-top: -5px;
@@ -194,6 +195,8 @@
     }
 
     &-handle {
+      position: absolute;
+      z-index: 1;
       margin-top: 0;
       margin-left: -5px;
       touch-action: pan-y;
